Right-align contact boxes, fix blog image, style class links like projects

--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,9 +1,14 @@
 .contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
     .textblock {
       max-width: 30rem;
       margin-top: $space-lg;
     }
     @include mobile {
+      align-items: flex-start;
       .textblock {
         max-width: 55rem;
       }
